@@ -10,6 +10,7 @@ Devel::NYTProf:Changes - List of significant changes to Devel::NYTProf
 
   Improved accuracy of subroutine timing by deducting statement measurement overheads.
   Improved readability of subroutine caller lists.
+  Replaced use of fpurge() with a more portable approach.
 
   Added exclusive subroutine time (time in sub excluding subs it called).
   Added use of clock_gettime(), if available, for 100ns resolution.
